# pokeland-web

./: .gitignore  README.md  compose.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/routes/: auth.py  user.py  user_pokemon.py
backend/app/config/: db.py  settings.py
backend/app/domains/: base_repository.py
backend/app/domains/user/: user.py  user_repository.py  user_schemas.py
backend/app/domains/user_pokemon/: user_pokemon.py  user_pokemon_repository.py  user_pokemon_schema.py
backend/app/helpers/: pokeapi_service.py  security.py
backend/migrations/: env.py
backend/migrations/versions/: 5186db418977_create_user_pokemons_table.py  f24fead37b22_create_users_table.py
backend/tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_pokeapi_service.py  test_security.py  test_user.py  test_user_pokemon.py
frontend/: Dockerfile  package.json
frontend/src/components/Layout/: index.tsx
frontend/src/components/Layout/Navbar/: index.tsx
frontend/src/components/Login/: index.tsx
frontend/src/components/Logo/: index.tsx
frontend/src/components/PokeImage/: index.tsx
frontend/src/components/PokemonStats/: index.tsx
frontend/src/components/Register/: index.tsx
frontend/src/components/Stats/: index.tsx
frontend/src/pages/: _app.tsx  index.tsx
frontend/src/pages/api/: api.ts
frontend/src/pages/pokemon/: index.tsx
frontend/src/pages/register/: index.tsx
frontend/src/types/: LoginTypes.ts
frontend/src/utils/: pokemonColors.ts
